# hyprhook

./: Cargo.toml  README.md  flake.nix  rust-toolchain.toml
benches/: rule_matching.rs
nix/: module.nix  package.nix
src/: args.rs  config.rs  hook.rs  lib.rs  main.rs  rule.rs  state.rs
