[package]
name = "hyprhook"
version = "0.1.0"
edition = "2021"

[package.metadata.crane]
name = "hyprhook"

[dependencies]
hyprland = "0.4.0-beta.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
