[package]
name = "hyprhook"
version = "0.1.0"
edition = "2021"

[package.metadata.crane]
name = "hyprhook"

[dependencies]
hyprland = "0.4.0-beta.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "sync"] }
serde = { version = "1", features = ["derive"] }
toml = "0.8"
regex = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
